--- a/source/_posts/软件工程文化.md
+++ b/source/_posts/软件工程文化.md
@@ -23,6 +23,8 @@ tags:
     - 时刻thinking。关注细节。精于联想。
 ![](http://ww1.sinaimg.cn/large/772d7a33gw1faygrvbo7ej20sg0lc0u4.jpg)
 
+<!-- more -->
+
 ## 我们的关注点
 - [ ] 价值提升
   所有的利益相关者，能否得到价值的提升。
