--- a/source/_posts/《数据结构与算法》学习笔记2.md
+++ b/source/_posts/《数据结构与算法》学习笔记2.md
@@ -44,3 +44,7 @@ call by position.
 什么是[中缀表达式？前缀表达式(波兰式)？后缀表达式(逆波兰式)](http://blog.csdn.net/antineutrino/article/details/6763722)
 [中缀/前缀/后缀表达式转换](http://blog.csdn.net/walkerkalr/article/details/22798365)
 > 中缀转后缀规则：从左到右遍历中缀表达式的每个数字和符号，若是数字就输出，即成为后缀表达式的一部分；若是符号，则判断其与栈顶符号的优先级，是右括号或优先级低于栈顶符号（乘除优先加减）则栈顶元素依次出找并输出，并将当前符号进栈，一直到最终输出后缀表达式为止。[原文](http://www.nowamagic.net/librarys/veda/detail/2307)
+
+### 队列 queue
+受限的向量(vector)。只能在队尾插入，只能在队首删除。**FIFO先进先出 LILO后进后出**
+可从向量(vector)或者列表(list)派生。
