--- a/source/_posts/《数据结构与算法》学习笔记2.md
+++ b/source/_posts/《数据结构与算法》学习笔记2.md
@@ -26,9 +26,9 @@ call by position.
 ## 4. 栈与队列
 均是线性序列（向量）的特殊实例。
 
-### 栈 stack
+### 4.1 栈 stack
 栈顶(top)与栈底(bottom)。只能从栈顶操作元素。push/pop/top. **LIFO:后进先出**
-从向量派生。以向量vector右端为栈顶进行push/pop操作，时间复杂度为O(1)。
+从向量派生。以向量vector右端（尾部）为栈顶进行push/pop操作，时间复杂度为O(1)。
 
 #### [进制转换算法](https://www.xuetangx.com/courses/TsinghuaX/30240184_2015X/2015_T1/courseware/ad1a23c053df4501a3facd66ef6ccfa9/a4c7d115d4bb4116a522e5971129a299/)
 通过不断将余数push到栈中，过程结束后pop出来的即是转换好的进制数。
@@ -45,6 +45,6 @@ call by position.
 [中缀/前缀/后缀表达式转换](http://blog.csdn.net/walkerkalr/article/details/22798365)
 > 中缀转后缀规则：从左到右遍历中缀表达式的每个数字和符号，若是数字就输出，即成为后缀表达式的一部分；若是符号，则判断其与栈顶符号的优先级，是右括号或优先级低于栈顶符号（乘除优先加减）则栈顶元素依次出找并输出，并将当前符号进栈，一直到最终输出后缀表达式为止。[原文](http://www.nowamagic.net/librarys/veda/detail/2307)
 
-### 队列 queue
+### 4.2 队列 queue
 受限的向量(vector)。只能在队尾插入，只能在队首删除。**FIFO先进先出 LILO后进后出**
 可从向量(vector)或者列表(list)派生。
