--- a/source/_posts/《数据结构与算法》学习笔记.md
+++ b/source/_posts/《数据结构与算法》学习笔记.md
@@ -7,6 +7,14 @@ tags:
  - 算法
  - 数据结构
 ---
+
+没事在各大MOOC网站搜索了下数据结构方面的课程，
+最后选择了学堂在线的[@邓俊辉](https://www.xuetangx.com/courses/search?query=%E9%82%93%E4%BF%8A%E8%BE%89)版本学习了一下。
+算是对早已忘记的大学课程的一个复习吧。
+
+这是云课堂的《数据结构与算法》课学习笔记第1部分。
+<!-- more -->
+
 # [数据结构与算法](https://www.xuetangx.com/courses/TsinghuaX/30240184_2015X/2015_T1/)
 
 清华大学 [@邓俊辉](https://www.xuetangx.com/courses/search?query=%E9%82%93%E4%BF%8A%E8%BE%89)
