--- a/source/_posts/最近要看的资料.md
+++ b/source/_posts/最近要看的资料.md
@@ -13,6 +13,7 @@ tags:
 
 列一下最近要学习的内容:
 
+<!-- more -->
 ## etcd 
 [*https://github.com/coreos/etcd*](https://github.com/coreos/etcd)
 ![](http://ww2.sinaimg.cn/large/772d7a33gw1f6668gn8p8j20ku06yq3u.jpg)
