--- a/source/_posts/架构师培训记.md
+++ b/source/_posts/架构师培训记.md
@@ -6,7 +6,11 @@ categories:
 tags:
  - Architecture
 ---
-一个月前报名参加了江苏软件产业人才发展基金会举办的第十二期架构师培训班。培训近一个月，现已接近尾声。培训班要求每个人写一篇结业论文。要求如下：
+
+一个月前报名参加了江苏软件产业人才发展基金会举办的第十二期架构师培训班。
+<!-- more -->
+
+培训近一个月，现已接近尾声。培训班要求每个人写一篇结业论文。要求如下：
 > 结合培训内容与工作实践，阐述对架构师角色的理解，包括其工作性质、职责与能力要求；探讨架构师对企业发展战略以及产品规划应起的作用，特别是对企业并购与产品整合的想法。在论文最后也请谈谈参加培训的收获与体会，并提出意见与建议。
 
 总结这一个月的培训，大部分是基于上层应用的架构而谈，如大数据，hadoop，网站管理，互联网等。与我一开始所期待的有更靠中下层的架构设计有点不同。虽然也有一次涉及到嵌入式的培训课程，但是老师讲的还是上层为多，并没有过多的涉及到中下层。
