--- a/source/_posts/微博图床.md
+++ b/source/_posts/微博图床.md
@@ -6,6 +6,9 @@ categories:
 tags:
  - Markdown
 ---
+
+博客贴图神器，目前没有之一！
+<!-- more -->
 之前blog一直在为用哪家图床服务发愁，一开始用的七牛云存储，不是太好用。后来无意中发现了一个叫[**`微博图床`**](https://chrome.google.com/webstore/detail/新浪微博图床/fdfdnfpdplfbbnemmmoklbfjbhecpnhf?hl)的神器。说它神器真不为过。速度快，简单易用，功能强大，图片还不丢失。
 
 官方说有如下功能特点。
@@ -17,7 +20,6 @@ tags:
 - 支持https模式
 - 支持自定义Chrome菜单栏图标
 
-<!-- more -->
 
 界面如下：
 ![](http://ww2.sinaimg.cn/large/772d7a33gw1f7m58wvkzqj20lu0eymzs.jpg)
